Fix layering of controls because map options was visible in fullscreen search

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -20,14 +20,14 @@
     margin: 0.5rem 0.5rem 0 0.5rem;
     border-radius: 0.5rem 0.5rem 0 0 ;
     background-color: white;
-    z-index: 3;
+    z-index: 1;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .routingResult {
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
-    z-index: 3;
+    z-index: 1;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
     background-color: white;
     margin: 0 0.5rem;
@@ -38,14 +38,14 @@
     grid-column: 3 / span 1;
     grid-row: 1 / span 2;
     background-color: transparent;
-    z-index: 3;
+    z-index: 1;
     pointer-events: none; /* let the user click on the map where the sidebar is transparent */
 }
 
 .poweredBy {
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
-    z-index: 3;
+    z-index: 1;
     background-color: white;
     margin: 0 0.5rem 0.5rem;
     border-radius: 0 0 0.5rem 0.5rem;
@@ -56,6 +56,9 @@
     display: flex;
     margin: 0.5rem;
     pointer-events: all; /* we want all the content to behave normally*/
+    background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1)
 }
 
 @media (max-width: 44rem) {
@@ -65,7 +68,7 @@
     }
 
     .map {
-        grid-row: 1 / span 3;
+        grid-row: 2 / span 2;
     }
 
     .sidebar {
@@ -73,18 +76,26 @@
         grid-column: 1 / span 2;
         margin: 0;
         border-radius: 0;
+        z-index: 3;
+        box-shadow: none;
     }
 
     .mapOptions {
         grid-row: 2 / span 1;
         grid-column: 2 / span 1;
+        box-shadow: none;
+    }
+
+    .mapOptionsContent {
+        box-shadow: none;
     }
 
     .routingResult {
         grid-row: 4 / span 1;
         grid-column: 1 / span 2;
         margin: 0;
-        z-index: 4;
+        z-index: 2;
+        box-shadow: none;
     }
 
     .poweredBy {
@@ -92,7 +103,8 @@
         grid-column: 1 / span 2;
         margin: 0;
         border-radius: 0;
-        z-index: 4;
+        z-index: 2;
+        box-shadow: none;
     }
 
 
