--- a/src/map/MapOptions.modules.css
+++ b/src/map/MapOptions.modules.css
@@ -1,9 +1,5 @@
 .mapOptionsContainer {
     display: flex;
-    background-color: white;
-    border-radius: 0.5rem;
-
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .options {
